Add base.html with basic version of nav

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,1 +1,6 @@
-<h1>Welcome to the home page</h1>
+{% extends "base.html" %}
+{% load static %}
+
+{% block bodyMain %}
+    <h1>Start growing your own food right now!</h1>
+{% endblock %}
