--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
                         class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="#!">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Plants</a>
@@ -60,11 +60,14 @@
             </div>
         </nav>
     </header>
-
-    <div class="d-flex justify-content-center">
-        {% block bodyMain %}
-        {% endblock %}
+    
+    <div class="row d-flex justify-content-center">
+        <div class="col-10 text-center">
+            {% block bodyMain %}
+            {% endblock %}
+        </div>
     </div>
+    
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
