Add 'all plants' page, displaying all plants

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,7 @@
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">Plants</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="{% url 'all_plants' %}">All plants</a></li>
                                 <li><a class="dropdown-item" href="#">Large trees</a></li>
                                 <li><a class="dropdown-item" href="#">Medium trees</a></li>
                                 <li><a class="dropdown-item" href="#">Small trees</a></li>
