Add search and move categories to plant page

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,22 +2,23 @@
 {% load static %}
 
 {% block bodyMain %}
-<header>
+<!-- Intro text -->
+<header class="text-center">
     <h1 class="mt-5">Start growing your own food <a href="#">right now!</a></h1>
+    <p class="mt-5">
+        Got a suggestion for a plant you think we should be selling? <br> <a href="#">Tell us!</a>
+    </p>
 </header>
 
-<p class="mt-5">
-    Got a suggestion for a plant you think we should be selling? <br> <a href="#">Tell us!</a>
-</p>
-
-<section class="col-10 m-auto mt-5">
+<!-- About us -->
+<section class="col-10 m-auto mt-5 text-center">
     <hr class="mb-4">
     <h3>About us</h3>
     <p>
         We are a plant selling company. We sell both seeds and grown plants of different ages and sizes.
-        Founded in 2021, the company is run by a single man with a vision. A vision of plants and food. 
-        Man loves foods. Man loves plants. Ergo, man grows plants and eats them. Man thinks this is smart. 
-        If reader thinks is smart to, reader buys many plants and eats them. 
+        Founded in 2021, the company is run by a single man with a vision. A vision of plants and food.
+        Man loves foods. Man loves plants. Ergo, man grows plants and eats them. Man thinks this is smart.
+        If reader thinks is smart to, reader buys many plants and eats them.
     </p>
 </section>
 
