--- a/plants/static/plants/css/plants.css
+++ b/plants/static/plants/css/plants.css
@@ -2,3 +2,12 @@
     font-style: italic;
     color: rgba(0, 0, 0, 0.55);
 }
+
+.categoryDropdown{
+    list-style: none;
+}
+
+.categoryDropdown a{
+    text-decoration: none;
+    color: #212529;
+}
