--- a/plants/templates/plants/plants.html
+++ b/plants/templates/plants/plants.html
@@ -7,12 +7,40 @@
 {% endblock %}
 
 {% block bodyMain %}
+    
+    <section class="row mt-4 justify-content-center">
+        <div class="col-10">
+            <div class="row">
+                <!-- Search -->
+                <div class="col-3">
+                    <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
+                        <input type="search" class="form-control form-control-dark" placeholder="Search..." aria-label="Search">
+                      </form>
+                </div>
+                <!-- Categories -->
+                <div class="col text-end">
+                    <li class="dropdown categoryDropdown">
+                        <a class="dropdown-toggle" id="categoryDropdown" href="#" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">Categories</a>
+                        <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
+                            <!-- {% for plant in plants %}
+                                <li><a class="dropdown-item" href="#">Large trees</a></li>
+                            {% endfor %} -->
+                        </ul>
+                    </li>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <!-- Wrapper for the gallery -->
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
-            <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
+    <section class="mt-4">
+        <div class="container ">
+            <!-- <div class="row gx-4 gx-lg-5 row-cols-1 row-cols-md-2 row-cols-l-3 row-cols-xl-4 justify-content-center"> -->
+            <div class="row justify-content-center">
                 {% for plant in plants %}
-                <div class="col mb-5">                    
+                <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-5">                    
                     <div class="card h-100">
                         <!-- Plant image, fill with placeholder if not present -->
                         {% if plant.Image_url %}
@@ -28,7 +56,7 @@
                                 
                                 <h5 class="fw-bolder">{{ plant.Common_name }}</h5>
                                 <h6 class="plant-card-subheader">{{ plant.Botanical_name }}</h6>
-                                <h6>Layer: {{ plant.Layer }}</h6>
+                                <h6>-- {{ plant.Layer }} --</h6>
                             </div>
                         </div>
                     </div>
