--- a/plants/static/plants/css/plants.css
+++ b/plants/static/plants/css/plants.css
@@ -3,11 +3,25 @@
     color: rgba(0, 0, 0, 0.55);
 }
 
-.categoryDropdown{
+.category-dropdown{
     list-style: none;
 }
 
-.categoryDropdown a{
+.category-dropdown a{
     text-decoration: none;
     color: #212529;
+}
+
+.quantity-input {
+    display: flex;
+    padding: 0.375rem 0.5rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
