--- a/plants/templates/plants/all_plants.html
+++ b/plants/templates/plants/all_plants.html
@@ -30,7 +30,7 @@
 
             <!-- Categories -->
             <div class="col text-end">
-                <li class="dropdown categoryDropdown">
+                <li class="dropdown category-dropdown">
                     <a class="dropdown-toggle" id="categoryDropdown" href="#" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">Categories</a>
                     <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
@@ -54,7 +54,7 @@
         <div class="row justify-content-center">
             {% for plant in plants %}
             <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-5">
-                <div class="card h-100">
+                <a href="{% url 'single_plant' plant.id %}" class="card h-100">
                     <!-- Plant image, fill with placeholder if not present -->
                     {% if plant.image_url %}
                     <img class="card-img-top" src={{ plant.Image_url }} alt="Image of {{ plant.common_name }}" />
@@ -64,13 +64,12 @@
                     <!-- Card text -->
                     <div class="card-body p-4">
                         <div class="text-center">
-
                             <h5 class="fw-bolder">{{ plant.common_name }}</h5>
                             <h6 class="plant-card-subheader">{{ plant.botanical_name }}</h6>
                             <h6>-- {{ plant.category.friendly_name }} --</h6>
                         </div>
                     </div>
-                </div>
+                </a>
             </div>
             {% empty %}
                 <div class="col-12 col-sm-6 col-lg-4 col-xl-3 mb-5">
