--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,18 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'all_plants' %}">Plants</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Suggestions</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Login</a></li>
+                        {% if request.user.is_authenticated %}
+                        <li class="nav-item">
+                            <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item">
+                            <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                        </li>
+                        {% endif %}
                     </ul>
                     <form class="d-flex">
                         <button class="btn btn-outline-dark" type="submit">
