--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                     <a href="{% url 'view_cart' %}" class="btn btn-outline-dark">
                         <i class="bi-cart-fill me-1"></i>
                         Cart
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">0</span>
+                        <span class="badge bg-dark text-white ms-1 rounded-pill">{{plant_count}}</span>
                     </a>
                 </div>
             </div>
