--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" href="{% static 'css/shop_homepage_styles.css' %}">
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/659d0d4dda.js" crossorigin="anonymous"></script>
+    <!-- JQuery slim and minified -->
+    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
+    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block customHead %}
@@ -61,7 +64,7 @@
     </header>
 
     <div class="row d-flex justify-content-center">
-        <div class="col-9">
+        <div class="col-11 col-m-10 col-l-9">
             {% block bodyMain %}
             {% endblock %}
         </div>
@@ -71,9 +74,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <!-- JQuery slim and minified -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-        integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+
     {% block customBodyEnd %}
     {% endblock %}
 </body>
