--- a/shoppingcart/templates/shoppingcart/view_cart.html
+++ b/shoppingcart/templates/shoppingcart/view_cart.html
@@ -52,11 +52,11 @@
                 <img class="img-cart mt-1 mb-3 ms-2" src="{{ MEDIA_URL }}noimage.png" alt="No image uploaded" />
                 {% endif %}
             </div>
-            <a href="{% url 'single_plant' plant.id %}" class="col-3 mt-2">
-                <p>
+            <div class="col-3 mt-2">
+                <a href="{% url 'single_plant' plant.id %}">
                     {{plant.common_name}}
-                </p>
-            </a>
+                </a>
+            </div>
             <div class="col-2 mt-2">
                 Price: € <span id="price_{{plant.id}}">{{plant.price}}</span>
             </div>
@@ -89,22 +89,24 @@
                 Line total: € <span class="line-total" id="line-total_{{plant.id}}">00,00</span>
             </div>
         </div>
-
         <script>set_line_total('{{plant.id}}', '{{plant.amount}}');</script>
         {% endfor %}
+
         <div class="row m-2">
-            <div class="col-9 mt-2">
-            </div>
+            <div class="col-9 mt-2"></div>
             <div class="col-2 mt-2">
                 Subtotal: € <span id="subtotal">{{ total_price }}</span>
                 <script>set_subtotal();</script>
             </div>
         </div>
-    </div>
-</div>
-<div class="row justify-content-center mt-4">
-    <div class="col-12 col-sm-10 col-lg-9 col-xl-8">
-
+        <div class="row m-2">
+            <div class="col-9 mt-2"></div>
+            <div class="col-2 mt-2 checkout">
+                <a href="" class="btn btn-success">
+                    Checkout
+                </a>
+            </div>
+        </div>
     </div>
 </div>
 {% endblock %}
@@ -119,8 +121,8 @@
             currentVal++;
             $(this).siblings('.quantity-input').val(currentVal);
             // Extract the plant ID and send it to set the new line total
-            line_id = $(this).siblings('.quantity-input').attr("id").substring(9);
-            set_line_total(line_id, currentVal);
+            plant_id = $(this).siblings('.quantity-input').attr("id").substring(9);
+            set_line_total(plant_id, currentVal);
         }
     })
 
@@ -132,8 +134,8 @@
             currentVal--;
             $(this).siblings('.quantity-input').val(currentVal);
             // Extract the plant ID and send it to set the new line total
-            line_id = $(this).siblings('.quantity-input').attr("id").substring(9);
-            set_line_total(line_id, currentVal);
+            plant_id = $(this).siblings('.quantity-input').attr("id").substring(9);
+            set_line_total(plant_id, currentVal);
         }
     })
 </script>
