--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
     <!-- JQuery slim and minified -->
     <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
     integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <!-- Stripe JS -->
+    <script src="https://js.stripe.com/v3/"></script>
     <!-- Custom CSS -->
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
     {% block customHead %}
