--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -1,12 +1,15 @@
 {% extends "base.html" %}
 {% load static %}
+{% block customHead %}
+     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
+{% endblock %}
 
 {% block bodyMain %}
 <div class="row justify-content-center">
     <div class="col-12 col-sm-11 col-xl-10">
         <div class="row m-2 mt-5">
             <div class="col-11">
-                <form action="{% url 'checkout' %}" method="post">
+                <form action="{% url 'checkout' %}" method="post" id="payment-form">
                     {% csrf_token %}
                     <fieldset>
                         <legend>Personal information:</legend>
@@ -30,10 +33,25 @@
                         {{ order_form.billing_postcode | as_crispy_field }}
                         {{ order_form.billing_country | as_crispy_field }}
                     </fieldset>
-                    <button type="submit" >Confirm purchase</button>
+                    <fieldset>
+                        <legend>Payment</legend>
+                        <!-- A Stripe card element will go here -->
+                        <div class="mb-3" id="card-element"></div>
+                        <!-- Used to display form errors -->
+                        <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
+                        <!-- Pass the client secret to the view so we can get the payment intent id -->
+                        <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                    </fieldset>
+                    <button type="submit" id="submit-button">Confirm purchase</button>
                 </form>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block customBodyEnd %}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
