Remove console messages, fix stripe payments

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,8 +16,8 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/659d0d4dda.js" crossorigin="anonymous"></script>
     <!-- JQuery slim and minified -->
-    <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"
-    integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js"
+        integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
     <!-- Stripe JS -->
     <script src="https://js.stripe.com/v3/"></script>
     <!-- Custom CSS -->
