Add suggestions app with working url

--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
         <!-- Main nav -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#!">Food plants to Grow</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Food plants to Grow</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation"><span
@@ -40,7 +40,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'all_plants' %}">Plants</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Suggestions</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'view_suggestions' %}">Suggestions</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
