--- a/suggestions/templates/suggestions/view_suggestions.html
+++ b/suggestions/templates/suggestions/view_suggestions.html
@@ -3,15 +3,26 @@
 
 {% block bodyMain %}
 <div class="container">
-    <div class="row">
+    <div class="row text-center">
         <div class="col">
             <h1>Welcome to the suggestions page</h1>
+            <a href="{% url 'add_suggestion' %}">Share your plant suggestion!</a>
         </div>
     </div>
-    <div class="row">
-        <div class="col">
+    <div class="row mt-4 justify-content-center">
+        <div class="col-8 text-start">
             {% for suggestion in suggestions %}
-                {{ suggestion }}
+                <div class="row m-2">
+                    <div class="col-3">
+                        {{ suggestion.common_name }}
+                    </div>
+                    <div class="col-3">
+                        {{ suggestion.botanical_name }}
+                    </div>
+                    <div class="col-6">
+                        {{ suggestion.argument }}
+                    </div>
+                </div>
             {% endfor %}
         </div>
     </div>
