--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'all_plants' %}">Plants</a></li>
                         <li class="nav-item"><a class="nav-link" href="{% url 'view_suggestions' %}">Suggestions</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
                             <a href="{% url 'account_logout' %}" class="nav-link">Logout</a>
