Change Account model to UserAccount, add userprofile form

--- a/templates/base.html
+++ b/templates/base.html
@@ -45,6 +45,9 @@
                         <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
                         {% if request.user.is_authenticated %}
                         <li class="nav-item">
+                            <a href="{% url 'profile' %}" class="nav-link">Profile</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="{% url 'account_logout' %}" class="nav-link">Logout</a>
                         </li>
                         {% else %}
