--- a/suggestions/templates/suggestions/view_suggestions.html
+++ b/suggestions/templates/suggestions/view_suggestions.html
@@ -19,8 +19,14 @@
                     <div class="col-3">
                         {{ suggestion.botanical_name }}
                     </div>
-                    <div class="col-6">
+                    <div class="col-5">
                         {{ suggestion.argument }}
+                    </div>
+                    <div class="col-1">
+                        {{ suggestion.number_of_upvotes }}
+                        <a href="{% url 'upvote_suggestion' suggestion.id %}">
+                            <i class="fas fa-arrow-up"></i>
+                        </a>
                     </div>
                 </div>
             {% endfor %}
