Add background image and small styling improvements

--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -16,7 +16,7 @@
                 class="col-sm-10 col-lg-8 col-xl-6 m-auto">
                 {% csrf_token %}
                 {{ contact_form | crispy }}
-                <button type="submit" class="m-3">Submit</button>
+                <button type="submit" class="btn btn-success m-3">Submit</button>
             </form>
         </div>
     </div>
