--- a/templates/base.html
+++ b/templates/base.html
@@ -28,61 +28,61 @@
 </head>
 
 <body>
-    <header>
-        <!-- Main nav -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="{% url 'home' %}">Food plants to Grow</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation"><span
-                        class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'all_plants' %}">Plants</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'view_suggestions' %}">Suggestions</a></li>
-                        <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
-                        {% if request.user.is_authenticated %}
-                        <li class="nav-item">
-                            <a href="{% url 'profile' %}" class="nav-link">Profile</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'account_logout' %}" class="nav-link">Logout</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a href="{% url 'account_signup' %}" class="nav-link">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="{% url 'account_login' %}" class="nav-link">Login</a>
-                        </li>
-                        {% endif %}
-                    </ul>
-                    <a href="{% url 'view_cart' %}" class="btn btn-outline-dark">
-                        <i class="bi-cart-fill me-1"></i>
-                        Cart
-                        <span class="badge bg-dark text-white ms-1 rounded-pill">{{plant_count}}</span>
-                    </a>
+    <div class="container main-container">
+        <header>
+            <!-- Main nav -->
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <div class="container px-4 px-lg-5">
+                    <a class="navbar-brand" href="{% url 'home' %}">Food plants to Grow</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation"><span
+                            class="navbar-toggler-icon"></span></button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
+                            <li class="nav-item"><a class="nav-link" href="{% url 'home' %}">Home</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'all_plants' %}">Plants</a></li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'view_suggestions' %}">Suggestions</a>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact</a></li>
+                            {% if request.user.is_authenticated %}
+                            <li class="nav-item">
+                                <a href="{% url 'profile' %}" class="nav-link">Profile</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'account_logout' %}" class="nav-link">Logout</a>
+                            </li>
+                            {% else %}
+                            <li class="nav-item">
+                                <a href="{% url 'account_signup' %}" class="nav-link">Register</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="{% url 'account_login' %}" class="nav-link">Login</a>
+                            </li>
+                            {% endif %}
+                        </ul>
+                        <a href="{% url 'view_cart' %}" class="btn btn-outline-dark">
+                            <i class="bi-cart-fill me-1"></i>
+                            Cart
+                            <span class="badge bg-dark text-white ms-1 rounded-pill">{{plant_count}}</span>
+                        </a>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </header>
+            </nav>
+        </header>
 
-    <div class="row d-flex justify-content-center">
-        <div class="col-11 col-m-10 col-l-9">
-            {% block bodyMain %}
-            {% endblock %}
-        </div>
+        
+        {% block bodyMain %}
+        {% endblock %}
+
+        <!-- Bootstrap JS -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
+
+        {% block customBodyEnd %}
+        {% endblock %}
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
-    {% block customBodyEnd %}
-    {% endblock %}
 </body>
 
 </html>
