Set allauth templates in bootstrap style

--- a/templates/allauth/account/password_reset_from_key.html
+++ b/templates/allauth/account/password_reset_from_key.html
@@ -12,8 +12,8 @@
     {% else %}
         <form method="POST" action="{{ action_url }}">
             {% csrf_token %}
-            {{ form.as_p }}
-            <input type="submit" name="action" value="{% trans 'change password' %}"/>
+            {{ form | crispy }}
+            <input type="submit" class="btn btn-info" name="action" value="{% trans 'change password' %}"/>
         </form>
     {% endif %}
 {% endblock %}
