--- a/plants/static/plants/css/plants.css
+++ b/plants/static/plants/css/plants.css
@@ -25,3 +25,7 @@
     border-radius: 0.25rem;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+.plant_image{
+    max-height: 350px;
+}
