--- a/plants/templates/plants/single_plant.html
+++ b/plants/templates/plants/single_plant.html
@@ -60,9 +60,9 @@
     <div class="col-4 text-center">
         <!-- Plant image, fill with placeholder if not present -->
         {% if plant.image_url %}
-        <img class="" src={{ plant.Image_url }} alt="Image of {{ plant.common_name }}" />
+        <img class="plant_image" src="{{ plant.image_url }}" alt="Image of {{ plant.common_name }}" />
         {% else %}
-        <img class="" src="{{ MEDIA_URL }}noimage.png" alt="No image uploaded" />
+        <img class="plant_image" src="{{ MEDIA_URL }}noimage.png" alt="No image uploaded" />
         {% endif %}
     </div>
 </section>
