--- a/static/css/base.css
+++ b/static/css/base.css
@@ -34,6 +34,6 @@ body{
 }
 
 .main-container{
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba(var(--bs-light-rgb), var(--bs-bg-opacity)) !important;
 }
