--- a/plants/templates/plants/all_plants.html
+++ b/plants/templates/plants/all_plants.html
@@ -8,7 +8,7 @@
 
 {% block bodyMain %}
 
-<section class="row mt-4 justify-content-center">
+<div class="row mt-4 justify-content-center">
     <div class="col-10">
         <div class="row">
             <!-- Search -->
@@ -29,22 +29,20 @@
             </div>
 
             <!-- Categories -->
-            <div class="col text-end">
-                <li class="dropdown category-dropdown">
-                    <a class="dropdown-toggle" id="categoryDropdown" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">Categories</a>
-                    <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
-                        <li><a class="dropdown-item" href="{% url 'all_plants' %}">All</a></li>
-                        {% for category in categories %}
-                        <li><a class="dropdown-item" href="{% url 'all_plants' %}?category={{ category.name }}">
-                                {{ category.friendly_name }}</a></li>
-                        {% endfor %}
-                    </ul>
-                </li>
+            <div class="col text-end dropdown category-dropdown">
+                <a class="dropdown-toggle" id="categoryDropdown" href="#" role="button" data-bs-toggle="dropdown"
+                    aria-expanded="false">Categories</a>
+                <ul class="dropdown-menu" aria-labelledby="categoryDropdown">
+                    <li><a class="dropdown-item" href="{% url 'all_plants' %}">All</a></li>
+                    {% for category in categories %}
+                    <li><a class="dropdown-item" href="{% url 'all_plants' %}?category={{ category.name }}">
+                            {{ category.friendly_name }}</a></li>
+                    {% endfor %}
+                </ul>
             </div>
         </div>
     </div>
-</section>
+</div>
 
 
 <!-- Wrapper for the gallery -->
