--- a/plants/templates/plants/single_plant.html
+++ b/plants/templates/plants/single_plant.html
@@ -41,8 +41,8 @@
                         </span>
                     </a>
                 </div>
-                <input class="quantity-input hidden" name="quantity" id="quantity" value="1">
-                <input class="quantity-input" name="quantity-visible" id="quantity-visible" 
+                <input type="hidden" class="quantity-input hidden" name="quantity" id="quantity" value="1">
+                <input type="text" class="quantity-input" name="quantity-visible" id="quantity-visible" 
                         value="1" min="1" max="{{plant.stock}}" disabled>
                 <div class="input-group-append">
                     <a class="btn btn-black" id="increment-quantity">
