--- a/shoppingcart/templates/shoppingcart/view_cart.html
+++ b/shoppingcart/templates/shoppingcart/view_cart.html
@@ -96,7 +96,7 @@
         <div class="row m-2">
             <div class="col-9 mt-2"></div>
             <div class="col-2 mt-2">
-                Subtotal: € <span name="subtotal" id="subtotal">00,00</span>
+                Subtotal: € <span id="subtotal">00,00</span>
                 <script>set_subtotal();</script>
             </div>
         </div>
